--- a/templates/home.html
+++ b/templates/home.html
@@ -3,7 +3,7 @@
   {{ super() }}
 {% endblock %}
 {% block content %}
-
+<div class="col-md-12">
 <form class="form-inline">
   <div class="form-group">
     <label for="keyword">Key Word:</label>
@@ -38,7 +38,8 @@
 <div class="space"></div>
 
 <div class="table-responsive">
-<table class="table table-bordered">
+<table id="myTable" class="display">
+<thead>
 <tr>
 <th>Accession ID</th>
 <th>Title</th>
@@ -46,6 +47,8 @@
 <th>Disease Name</th>
 <th>TissueType</th> 
 </tr>
+</thead>
+<tbody>
 <tr>
 <td>E-GEOD-57648</td>
 <td>Effect of Rps5 heterozygous deletion on embryonic stem cells transcriptome</td>
@@ -61,8 +64,14 @@
 <td>Rps5+/-</td>
 <td>embryonic stem cells (WT and RPs5KO)</td>
 </tr>
+</tbody>
 </table>
 </div>
-
+</div><!-- close col-md-12 .*-inner (main-content or sidebar, depending if sidebar is used) -->
+<script>
+$(document).ready(function(){
+    $('#myTable').DataTable();
+});
+</script>
 
 {% endblock %}
