--- a/templates/layout.html
+++ b/templates/layout.html
@@ -16,6 +16,12 @@
 <link rel="profile" href="http://gmpg.org/xfn/11">
     {% endblock %}
   </head>
+  
+  <!-- ......
+  This is the layout for all html pages. contains the structure of all pages and menu.
+  bootstrap is used as css framework
+  No data required from back end in this page
+  .....-->
   <body>
         <div class="main-content gradient">  
          
