download and inquiry page

--- a/rnaseqmetadb/templates/home.html
+++ b/rnaseqmetadb/templates/home.html
@@ -4,7 +4,7 @@
 {% endblock %}
 {% block content %}
 <div class="col-md-12">
-<form class="form-inline">
+<form class="form-inline" action="{{url_for('home')}}">
   <div class="form-group">
     <label for="keyword">Key Word:</label>
     <input type="text" class="form-control" id="keyword">
