added comment in download page

--- a/rnaseqmetadb/templates/download.html
+++ b/rnaseqmetadb/templates/download.html
@@ -3,7 +3,8 @@
   {{ super() }}
 {% endblock %}
 {% block content %}
-<!-- Only valid user can download. Others will be denied -->
+<!-- Only valid user can download. Others will be denied
+Add functionality to download all data in csv format -->
 <div class="col-md-4 col-md-offset-4" style="height:60vh">
 
   <p>You must have an account to be able to download</p>
