--- a/rnaseqmetadb/templates/createaccount.html
+++ b/rnaseqmetadb/templates/createaccount.html
@@ -5,8 +5,6 @@
 {% block content %}
 <div class="col-md-8 col-md-offset-3">
 		<h3 style="margin-bottom:15px">Create an Account</h2>
-		
-		
 		</div>
 			<div class="form-horizontal" id="accountForm" style="margin-top:30px">
 			<form action="" method = "POST">
@@ -22,10 +20,10 @@
 			      <input type="text" class="form-control" name="lastname">
 			    </div>
 			  </div>
-			  			  <div class="form-group">
+			  	 <div class="form-group">
 			    <label for="YourEmail" class="col-sm-3 control-label">Your Email:</label>
 			    <div class="col-sm-5">
-			      <input type="text" class="form-control" name="YourEmail">
+			      <input type="email" class="form-control" name="YourEmail">
 			    </div>
 			  </div>
 			  <div class="form-group">
@@ -34,7 +32,7 @@
 			      <input type="text" class="form-control" name="institution">
 			    </div>
 			  </div>
-			  			  <div class="form-group">
+			  		<div class="form-group">
 			    <label for="pwd" class="col-sm-3 control-label">Password:</label>
 			    <div class="col-sm-5">
 			      <input type="password" class="form-control" name="pwd">
