--- a/rnaseqmetadb/templates/login.html
+++ b/rnaseqmetadb/templates/login.html
@@ -4,18 +4,18 @@
 {% endblock %}
 {% block content %}
 <div class="col-md-4 col-md-offset-4" style="height:60vh">
-<form>
+<form action="" method = "POST">
   <div class="form-group">
-    <label for="exampleInputEmail1">Email address</label>
-    <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Enter email">
+    <label for="email">Email address</label>
+    <input type="email" class="form-control" name="email" placeholder="Enter email">
   </div>
   <div class="form-group">
-    <label for="exampleInputPassword1">Password</label>
-    <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+    <label for="password">Password</label>
+    <input type="password" class="form-control" name="password" placeholder="Password">
   </div>
     <div class="form-group">
-			      <button type="text" type="submit" class="btn btn-primary" name="login">Login</button>
-			    </div>
+	<button type="text" type="submit" class="btn btn-primary" name="login">Login</button>
+ </div>
   </form>
   </div>
   <div class="col-md-4"></div>
