--- a/rnaseqmetadb/templates/download.html
+++ b/rnaseqmetadb/templates/download.html
@@ -6,10 +6,11 @@
 <!-- Only valid user can download. Others will be denied
 Add functionality to download all data in csv format -->
 <div class="col-md-4 col-md-offset-4" style="height:60vh">
-
+	{% if login_session.get('login') is none%}
   <p>You must have an account to be able to download</p>
+	{% else %}
   <a class="btn btn-primary btn-lg" href="#" role="button">Click to Bulk Download</a>
-
+	{% endif %}
   </div>
   <div class="col-md-4"></div>
 {% endblock%}
