--- a/rnaseqmetadb/templates/submission.html
+++ b/rnaseqmetadb/templates/submission.html
@@ -37,7 +37,7 @@
 			  <div class="form-group">
 			    <label for="Comments" class="col-sm-3 control-label">Comments (optional):</label>
 			    <div class="col-sm-5">
-			      <textarea class="form-control" name="Comments" ></textarea>
+			      <input type="text" class="form-control" name="Comments" style="height:100px">
 			    </div>
 			  </div>
 			  <div class="form-group">
