--- a/rnaseqmetadb/templates/home.html
+++ b/rnaseqmetadb/templates/home.html
@@ -4,10 +4,10 @@
 {% endblock %}
 {% block content %}
 <div class="col-md-12">
-<form class="form-inline" action="{{url_for('home')}}">
+<form class="form-inline" action="">
   <div class="form-group">
     <label for="keyword">Key Word:</label>
-    <input type="text" class="form-control" id="keyword">
+    <input type="text" class="form-control" name="keyword">
   </div>
   <div class="form-group">
     <label for="genename">Gene Name:</label>
