--- a/rnaseqmetadb/templates/submission.html
+++ b/rnaseqmetadb/templates/submission.html
@@ -31,7 +31,7 @@
 			  <div class="form-group">
 			    <label for="YourEmail" class="col-sm-3 control-label">Your Email:</label>
 			    <div class="col-sm-5">
-			      <input type="text" class="form-control" name="YourEmail">
+			      <input type="email" class="form-control" name="YourEmail">
 			    </div>
 			  </div>
 			  <div class="form-group">
