--- a/rnaseqmetadb/templates/inquiry.html
+++ b/rnaseqmetadb/templates/inquiry.html
@@ -29,7 +29,7 @@ Admin can approve or disapprove the inquiry. clicking submit button will toggle 
 <td>{{data.name}}</td>
 <td>{{data.email}}</td>
 <td>{{data.comments}}</td>
-<td>status</td>
+<td>{{data.status}}</td>
 <td><div class="center-block"><input type="checkbox" id="dataid" ></div></td>
 </tr>
 {% endfor %}
