--- a/rnaseqmetadb/templates/createaccount.html
+++ b/rnaseqmetadb/templates/createaccount.html
@@ -11,19 +11,19 @@
 			  <div class="form-group">
 			    <label for="firstname" class="col-sm-3 control-label">First Name:</label>
 			    <div class="col-sm-5">
-			      <input type="text" class="form-control" name="firstname">
+			      <input type="text" class="form-control" name="firstname" required>
 			    </div>
 			  </div>
 			  <div class="form-group">
 			    <label for="lastname" class="col-sm-3 control-label">Last Name:</label>
 			    <div class="col-sm-5">
-			      <input type="text" class="form-control" name="lastname">
+			      <input type="text" class="form-control" name="lastname" required>
 			    </div>
 			  </div>
 			  	 <div class="form-group">
 			    <label for="YourEmail" class="col-sm-3 control-label">Your Email:</label>
 			    <div class="col-sm-5">
-			      <input type="email" class="form-control" name="YourEmail">
+			      <input type="email" class="form-control" name="YourEmail" required>
 			    </div>
 			  </div>
 			  <div class="form-group">
@@ -35,13 +35,13 @@
 			  		<div class="form-group">
 			    <label for="pwd" class="col-sm-3 control-label">Password:</label>
 			    <div class="col-sm-5">
-			      <input type="password" class="form-control" name="pwd">
+			      <input type="password" class="form-control" name="pwd" required>
 			    </div>
 			  </div>
 			  			  			  <div class="form-group">
 			    <label for="rptpwd" class="col-sm-3 control-label">Repeat Password:</label>
 			    <div class="col-sm-5">
-			      <input type="password" class="form-control" name="rptpwd">
+			      <input type="password" class="form-control" name="rptpwd" required>
 			    </div>
 			  </div>
 
