--- a/rnaseqmetadb/templates/submission.html
+++ b/rnaseqmetadb/templates/submission.html
@@ -13,7 +13,7 @@
 			  <div class="form-group">
 			    <label for="AccessionID" class="col-sm-3 control-label">Accession ID:</label>
 			    <div class="col-sm-5">
-			      <input type="text" class="form-control" name="AccessionID" placeholder="GEO/ArrayExpress Accession ID">
+			      <input type="text" class="form-control" name="AccessionID" placeholder="GEO/ArrayExpress Accession ID" required>
 			    </div>
 			  </div>
 			  <div class="form-group">
@@ -25,11 +25,11 @@
 			  <div class="form-group">
 			    <label for="YourName" class="col-sm-3 control-label">Your Name:</label>
 			    <div class="col-sm-5">
-			      <input type="text" class="form-control" name="YourName">
+			      <input type="text" class="form-control" name="YourName" required>
 			    </div>
 			  </div>
 			  <div class="form-group">
-			    <label for="YourEmail" class="col-sm-3 control-label">Your Email:</label>
+			    <label for="YourEmail" class="col-sm-3 control-label" required>Your Email:</label>
 			    <div class="col-sm-5">
 			      <input type="email" class="form-control" name="YourEmail">
 			    </div>
