--- a/rnaseqmetadb/templates/inquiry.html
+++ b/rnaseqmetadb/templates/inquiry.html
@@ -7,7 +7,7 @@
 This page will only be visible to administrator. Create an extra boolean field (status)in inquiry table
 Admin can approve or disapprove the inquiry. clicking submit button will toggle the status in database if check box is checked.
  -->
-<div class="col-md-12">
+<div class="col-md-12" style="min-height:60vh"">
 <div class="table-responsive">
 <table id="inquiryTable" class="table">
 <thead>
