--- a/rnaseqmetadb/templates/contactus.html
+++ b/rnaseqmetadb/templates/contactus.html
@@ -3,7 +3,7 @@
   {{ super() }}
 {% endblock %}
 {% block content %}
-<div class="col-sm-6 col-sm-offset-3">
+<div class="col-sm-6 col-sm-offset-3" style="min-height:60vh">
 <div class="page-header">
   <h1>Contact Us </h1>
 </div>
