--- a/rnaseqmetadb/templates/download.html
+++ b/rnaseqmetadb/templates/download.html
@@ -5,7 +5,7 @@
 {% block content %}
 <!-- Only valid user can download. Others will be denied
 Add functionality to download all data in csv format -->
-<div class="col-md-4 col-md-offset-4" style="height:60vh">
+<div class="col-md-4 col-md-offset-4" style="min-height:60vh">
 	{% if login_session.get('login') is none%}
   <p>You must have an account to be able to download</p>
 	{% else %}
