--- a/rnaseqmetadb/templates/home.html
+++ b/rnaseqmetadb/templates/home.html
@@ -3,7 +3,7 @@
   {{ super() }}
 {% endblock %}
 {% block content %}
-<div class="col-md-12">
+<div class="col-md-12" style="min-height:60vh">
 <form class="form-inline" action="">
   <div class="form-group">
     <label for="keyword">Key Word:</label>
