--- a/rnaseqmetadb/templates/statistics.html
+++ b/rnaseqmetadb/templates/statistics.html
@@ -44,7 +44,7 @@
 		var data_geo = new google.visualization.DataTable({{statGeo | safe}});
 
       // Set chart options
-      var options_disease = {'title':'Publications by Geographic Location',
+      var options_disease = {'title':'Publications by Disease',
                      'width':600,
                      'height':400};
 					 
