--- a/rnaseqmetadb/templates/submission.html
+++ b/rnaseqmetadb/templates/submission.html
@@ -37,12 +37,12 @@
 			  <div class="form-group">
 			    <label for="Comments" class="col-sm-3 control-label">Comments (optional):</label>
 			    <div class="col-sm-5">
-			      <input type="text" class="form-control" name="Comments" style="height:100px">
+			      <textarea type="text" class="form-control" name="Comments" style="height:100px" placeholder="Make Your Comments."></textarea>
 			    </div>
 			  </div>
 			  <div class="form-group">
 			    <div class="col-sm-offset-3 col-sm-5">
-			      <button type="text" type="submit" class="btn btn-primary" name="inquerySub">Submit</button>
+			      <button type="submit" class="btn btn-primary" name="inquerySub">Submit</button>
 			    </div>
 			  </div>
 			</form>
