--- a/rnaseqmetadb/templates/statistics.html
+++ b/rnaseqmetadb/templates/statistics.html
@@ -64,7 +64,7 @@
       chart.draw(data_geo, options_geo);
 	  var chart = new google.visualization.PieChart(document.getElementById('chart_div2'));//Publications by Journal
       chart.draw(data_journal, options_journal);
-	  var chart = new google.visualization.ColumnChart(document.getElementById('chart_div3'));//Publications by Research Area
+	  var chart = new google.visualization.PieChart(document.getElementById('chart_div3'));//Publications by Research Area
       chart.draw( data_researchArea, options_researchArea);
 	   var chart = new google.visualization.PieChart(document.getElementById('chart_div4'));//Publications by Disease
       chart.draw(data_disease, options_disease);
