--- a/rnaseqmetadb/templates/contactus.html
+++ b/rnaseqmetadb/templates/contactus.html
@@ -13,7 +13,7 @@ College Station, TX 77843-3128<br/>
 Office: 215F WEB<br/>
 <span class="text-success">Email:rnaseqmetadb AT google CONCATENATE groups DOT com <br/> </span>
 </p>
-<p class="text-info">For data inquiries, please submit the form at Inquiry Submission. We will get back to you as soon as possible.</p>
+<p class="text-info">For data inquiries, please submit the form at Dataset Submission. We will get back to you as soon as possible.</p>
 <div class="space"> </div>
 </div>
 
