--- a/rnaseqmetadb/templates/datasets.html
+++ b/rnaseqmetadb/templates/datasets.html
@@ -81,48 +81,45 @@ Lab Website
       </tr>
       <tr>
         <td>Sample List</td>
-        <td><a target=_blank href="{{'http://www.ebi.ac.uk/arrayexpress/experiments/'+dataRow["ArrayExpress"]+'/samples/'}}">Check Sample List in ArrayExpress</a></td></td>
+        <td><a target=_blank href="{{'http://www.ebi.ac.uk/arrayexpress/experiments/'+dataRow['ArrayExpress']+'/samples/'}}" >Check Sample List in ArrayExpress</a></td>
     </tr>
     <tr>
       <td>Publication</td>
       <td>
+	  <dl class="dl-horizontal">	 
+	  <dt>Title</dt>
+	  <dd>
         {% for i in range(dataRow["Publication"]|length)%}
         <a target=_blank href="{{'http://www.ncbi.nlm.nih.gov/pubmed/'+dataRow['PubMed'][i]}}">{{dataRow["Publication"][i]}}</a> <br/> <!--Add appropriate pubmed ID in the link-->
         {% endfor %} 
-        <table>
-          <tr>
-            <td>Authors:</td>
-            <td>
+		</dd>
+            <dt>Authors</dt>
+            <dd>
               {{', '.join(dataRow["Author"])}} <br/> 
-            </td>
-          </tr>
-          <tr>
-            <td>Abstract</td>
-            <td>
+            </dd>
+            <dt>Abstract</dt>
+            <dd>
               {% for abs in dataRow["Abstract"] %}
               {{abs}} <br/>
               {% endfor %}
-            </td>
-          </tr>
-          <tr>
-            <td>Journal</td>
-            <td>
+            </dd>
+            <dt>Journal</dt>
+            <dd>
               {% for journal in dataRow["Journal"] %}
               {{journal}} <br/>
               {% endfor %}
-            </td>
-          </tr>
-          <tr>
-            <td>Year</td>
-            <td>
+            </dd>
+            <dt>Year</dt>
+            <dd>
               {% for year in dataRow["Year"] %}
               {{year}} <br/>
               {% endfor %}
-            </td>
-          </tr>
-        </table>
+            </dd>
+		  </dl>
       </td>
+	  
     </tr>
+	
     <tr>
       <td>PI Name</td>
       <td><a target=_blank href="{{dataRow['Website']}}">{{dataRow['PI']}} </a> </td>
